[package]
name = "simple_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
cbc = "0.1.2"
aes = "0.8.1"

reqwest = { version = "0.11", features = ["blocking"] }
[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug"
]
